Add poster feature and ad new UI

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,3 +1,8 @@
-page-search {
+.toolbar-background {
+  background-color: #F7CC38;
+}
 
+.alert-wrapper * {
+  background-color: #040809;
+  color: #F7CC38; 
 }
