--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,7 +6,9 @@ page-home {
   width: 200px;
   height: 50px;
   margin: auto;
-  margin-top: 20px;
+  margin-top: 40px;
   display: block;
   font-size: 20px;
+  background-color: #F7CC38;
+  border-radius: 10px;
 }
