--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,9 +6,20 @@ page-home {
   width: 200px;
   height: 50px;
   margin: auto;
-  margin-top: 40px;
   display: block;
   font-size: 20px;
   background-color: #F7CC38;
   border-radius: 10px;
+}
+
+.credits {
+  color: #F7CC38;
+  font-size: 16px;
+  margin-top: 8%;
+  text-align: center;
+}
+
+.credits a {
+  color: #F7CC38;
+  text-decoration: none;
 }
